# mdview

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
mdview-core/: Cargo.toml
mdview-core/src/: lib.rs  parser.rs  types.rs
mdview-core/tests/: golden.rs
mdview-core/tests/fixtures/: complex_doc.expected.json  complex_doc.md  nested_quote_list.expected.json  nested_quote_list.md  paragraph_hardbreak.expected.json  paragraph_hardbreak.md  table_with_alignment.expected.json  table_with_alignment.md
mdview-electron/: main.js  mdview.sh  package-lock.json  package.json  preload.js
mdview-electron/renderer/: index.html  renderer.js  style.css
mdview-json/: Cargo.toml
mdview-json/src/: main.rs
mdview-tui/: Cargo.toml
mdview-tui/src/: app.rs  config.rs  highlighter.rs  lib.rs  main.rs  style.rs  theme.rs  types.rs  watcher.rs
mdview-tui/src/ui/: mod.rs  statusbar.rs  toc.rs  viewer.rs
src/: app.rs  lib.rs  main.rs  types.rs  watcher.rs
src/parser/: markdown.rs  mod.rs
src/ui/: toc.rs
