[package]
name = "tui-md-viewer"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"

[[bin]]
name = "mdview"
path = "src/main.rs"

[dependencies]
ratatui         = "0.30.0"
crossterm       = "0.29.0"
pulldown-cmark  = "0.13.2"
syntect         = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
notify-debouncer-full = "0.4.0"
anyhow          = "1"
clap            = { version = "4", features = ["derive"] }
