[package]
name = "mdview-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pulldown-cmark = "0.13.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]

[features]
wasm = ["dep:wasm-bindgen"]
